# Python_WEB_ht14_Fast-API_documentation-and-tests

./: .env.example  .gitignore  ERROR.txt  README.md  architecture.txt  docker-compose.yml  main.py  pyproject.toml
docs/: index.rst
docs/source/: conf.py  index.rst  sphinx_path_log.txt
migrations/versions/: 1ba571b13416_init.py  2b305bcf5a6c_init.py  4bf22d83cea2_init.py  cabef87b9b2c_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/repository/: test_unit_repository_contacts.py  test_unit_repository_users.py
tests/routes/: conftest.py  test_pytest_route_auth.py  test_pytest_route_contacts.py  utils.py
